--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,6 +1,4 @@
-*{
-    border: 2px solid blue;
-}
+
 #content{
     max-width: 1600px;
     margin: 0 auto;
@@ -51,7 +49,7 @@ nav a:hover{
     background-color: #fcfbfb;
 }
 footer{
-    background-color: #fcfbfb;
+    background-color: #22577a;
     color: #57cc99;
 }
 .home-title{
