--- a/w3_practice/styles/styles.css
+++ b/w3_practice/styles/styles.css
@@ -16,10 +16,17 @@ p {
 
 a { 
     font-size: 1.5em;
+    color: white;
+    padding: 25px;
+
 }
 
 h1{
     text-align: center;
+    margin: 50px 0;
+}
+nav{
+    padding: 25px;
 }
 nav, footer{
     text-align: center;
@@ -32,6 +39,7 @@ img{
     width: 80%;
     display: block;
     margin: 0 auto;
+    border: 4px solid steelblue;
 }
 
 main p {
@@ -43,8 +51,14 @@ main p {
 footer p { 
     font-size: 20px;
     margin: 20px auto;
+    background-color: steelblue;
+    color: white;
+    padding: 25px;
 }
 a:hoover { 
     background-color: yellow;
     color: greenyellow;
+}
+body{
+    margin: 0;
 }
