--- a/auric_consulting/styles/site-plan.css
+++ b/auric_consulting/styles/site-plan.css
@@ -1,7 +1,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Lato&display=swap" rel="stylesheet');
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Merriweather:wght@300&display=swap" rel="stylesheet');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -11,7 +11,7 @@ Fonts are separated by a | */
   --accent2-color: #74A4BE;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Crete Round", sans-serif, Arial;
+  --heading-font: Merriweather, sans-serif, Arial;
   --paragraph-font: Lato, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
