--- a/component/index.html
+++ b/component/index.html
@@ -30,7 +30,7 @@ body {
 }
 
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: lightskyblue;
   color: white;
 }
 
@@ -65,8 +65,8 @@ body {
 
 <div class="topnav" id="myTopnav">
   <a href="#home" class="active">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
+  <a href="#news">Contact</a>
+  <a href="#contact">Site Plan</a>
   <a href="#about">About</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
@@ -74,8 +74,8 @@ body {
 </div>
 
 <div style="padding-left:16px">
-  <h2>Responsive Topnav Example</h2>
-  <p>Resize the browser window to see how it works.</p>
+  <h2>A simple component activity</h2>
+  <p>WDD-130 Alan Sánchez</p>
 </div>
 
 <script>
