--- a/poem/styles/style.css
+++ b/poem/styles/style.css
@@ -5,13 +5,13 @@ section{
     width: 50%;
     background-color: lightblue;
 }
-.block1{
+#block1{
     margin-right: auto;
 }
-.block2, .block4{
+#block2, #block4{
     margin: 0 auto;
 }
-.block3{
+#block3{
     margin-left: auto;
 }
 p:nth-of-type(2){
@@ -23,9 +23,9 @@ p:nth-of-type(1){
 p:nth-of-type(3){
     text-align: right;
 }
-.block4 p:nth-of-type(1){
+#block4 p:nth-of-type(1){
     text-align: right;
 }
-.block4 p:nth-of-type(3){
+#block4 p:nth-of-type(3){
     text-align: left;
 }
