--- a/auric_consulting/styles/style.css
+++ b/auric_consulting/styles/style.css
@@ -291,3 +291,21 @@ footer .social img {
 .child-grid-image{
   width: 100%;
 }
+
+.partner-img{
+  width: 60%;
+}
+
+.consultant-img{
+  width: 60%;
+}
+.partners-grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+}
+.consultants-grid{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  text-align: center;
+}
