--- a/auric_consulting/styles/style.css
+++ b/auric_consulting/styles/style.css
@@ -63,7 +63,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    text-align: center;
+    
 }
 .footer-content h3{
     font-size: 2.1rem;
@@ -317,4 +317,7 @@ body{
   font-family: Lato, Arial, Helvetica, sans-serif;
   font-weight: bold;
 
+}
+footer{
+  color: white;
 }
